--- a/assets/css/minigames.css
+++ b/assets/css/minigames.css
@@ -1,3 +1,35 @@
 button {
-    
+    margin: 20px;
+    padding: 10px 20px;
+    font-size: 16px;
+}
+
+.modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: block; /*Hidden by default*/
+    background-color: white;
+    padding: 20px;
+    border: 2px solid #ccc;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+}
+
+.modal-content {
+    text-align: center;
+}
+
+.modal .close-btn {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #f44336;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
+
+.modal .close-btn:hover {
+    background-color: #d32f2f;
 }
