--- a/assets/css/minigames.css
+++ b/assets/css/minigames.css
@@ -4,7 +4,7 @@ button {
     font-size: 16px;
 }
 
-.modal {
+.minigame {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -17,11 +17,11 @@ button {
     z-index: 1000;
 }
 
-.modal-content {
+.minigame-content {
     text-align: center;
 }
 
-.modal .close-btn {
+.minigame .close-btn {
     margin-top: 20px;
     padding: 10px 20px;
     background-color: #f44336;
@@ -30,6 +30,6 @@ button {
     cursor: pointer;
 }
 
-.modal .close-btn:hover {
+.minigame .close-btn:hover {
     background-color: #d32f2f;
 }
