--- a/test-folder/test.css
+++ b/test-folder/test.css
@@ -1,63 +1,100 @@
-.guess-wrapper {
-    padding: 30px 40px;
-    border-radius: 12px;
+::selection {
+    color: #fff;
+    background-color: #7d2ae8;
+}
+
+.rps-container {
+    padding: 2rem 7rem;
+    border-radius: 14px;
     background: #fff;
-    text-align: center;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
 
-.guess-wrapper #guess-section {
-    font-size: 18px;
-    font-weight: 400;
-    color: #333;
-}
-
-.guess-wrapper p {
-    color: #333;
-    margin-top: 10px;
-}
-
-.guess-wrapper .guess-input-field {
+.rps-result_images {
     display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin: 25px 0;
+    column-gap: 7rem;
 }
 
-.guess-input-field input,
-.guess-input-field button {
-    height: 50px;
-    width: calc(100% / 2 - 20px);
-    outline: none;
-    padding: 0 20px;
-    border-radius: 8px;
-    font-size: 18px;
+.rps-container.start .rps-user_result {
+    transform-origin: left;
+    animation: userShake 0.7s ease infinite;
 }
 
-.guess-input-field input {
+@keyframes userShake {
+    50% {
+        transform: rotate(10deg);
+    }
+}
+
+.rps-container.start .rps-cpu_result {
+    transform-origin: right;
+    animation: cpuShake 0.7s ease infinite;
+}
+
+@keyframes cpuShake {
+    50% {
+        transform: rotate(-10deg);
+    }
+}
+
+.rps-result_images img {
+    width: 100px;
+}
+
+.rps-user_result img {
+    transform: rotate(90deg);
+}
+
+.rps-cpu_result img {
+    transform: rotate(-90deg) rotateY(180deg);
+}
+
+.rps-result {
     text-align: center;
-    color: #707070;
-    width: 110px;
-    border: 1px solid #aaa;
+    font-size: 2rem;
+    color: #7d2ae8;
+    margin-top: 1.5rem;
 }
 
-input::-webkit-inner-spin-button,
-input::-webkit-outer-spin-button {
-    display: none;
+.rps-option_image img {
+    width: 50px;
 }
 
-.guess-input-field input:disabled {
-    cursor: not-allowed;
+.rps-option_images {
+    display: flex;
+    align-items: center;
+    margin-top: 2.5rem;
+    justify-content: space-between;
 }
 
-.guess-input-field button {
-    border: none;
-    background: #4a98f7;
-    color: #fff;
+.rps-container.rps-start .rps-option_images {
+    pointer-events: none;
+}
+
+.rps-option_image {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    opacity: 0.5;
     cursor: pointer;
-    transition: 0.3s;
+    transition: opacity 0.3s ease;
 }
 
-.guess-input-field button:active {
-    transform: scale(0.97);
+.rps-option_image:hover {
+    opacity: 1;
+}
+
+.rps-option_image.active {
+    opacity: 1;
+}
+
+.rps-option_image img {
+    pointer-events: none;
+}
+
+.rps-option_image p {
+    color: #7d2ae8;
+    font-size: 1.235rem;
+    margin-top: 1rem;
+    pointer-events: none;
 }
