--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,3 +51,14 @@ body {
     top: 290px;
     left: 3px;
 }
+
+#mountain{
+    position: absolute;
+    top: 150px;
+    right: 220px;
+}
+
+#fort{
+    position: absolute;
+    top
+}
