--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ body {
 }
 
 /* place holder button */
-#combat-start-btn{
+#quest{
     position: absolute;
     bottom: 100px;
     right: 300px;
