--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,21 +19,23 @@ body {
     margin: 0 30px;
 }
 
-.game-area{
+.controls-area{
     position: relative;
-    width: 100%;
-    height: 200%;
-}
-
-
-
-/* Ensure the container is a flex container */
-.container {
     display: flex;
     justify-content: center; /* Center horizontally */
     align-items: center; /* Center vertically */
-    height: 100vh; /* Full viewport height */
+    flex-wrap: wrap;
 }
+
+/* code snippet from https://stackoverflow.com/questions/1909648/stacking-divs-on-top-of-each-other */
+.inner {
+    position: absolute;
+  }
+
+/* Ensure the container is a flex container */
+/* .container {
+    
+} */
 
 /* place holder button */
 #quest{
@@ -109,80 +111,6 @@ body {
     transition: width 0.3s ease;
 }
 
-#map{
-    z-index: 0;
-}
-
-#icons{
-    z-index: 1;
-}
-
-@media screen and (max-width: 576px) {
-    #boat {
-        position: absolute;
-        bottom: 65px;
-        right: 145px;
-    }
-    
-    #tree{
-        position: absolute;
-        top: 310px;
-        left: 20px;
-    }
-    
-    #mountain{
-        position: absolute;
-        top: 200px;
-        right: 210px;
-    }
-    
-    #fort{
-        position: absolute;
-        top: 310px;
-        right: 216px;
-    }
-    
-    #skull{
-        position: absolute;
-        top: 175px;
-        right: 0px;
-    }
-    
-
-    /* boat scene */
-
-    #checkBox{
-        position: absolute;
-        top: 200px;
-        right: 200px;
-    }
-}
-
-@media screen and (min-width: 768px) {
-    #boat {
-        position: absolute;
-        bottom: 0rem;
-        right: 220px;
-    }
-    
-    #tree{
-        position: absolute;
-        
-    }
-    
-    #mountain{
-        position: absolute;
-        
-    }
-    
-    #fort{
-        position: absolute;
-        
-    }
-    
-    #skull{
-        position: absolute;
-        
-    }
-    
+#boat {
+    align-self: baseline;
 }
