Add Pow display Enemy type Ememy HP bar display

--- a/assets/css/battle.css
+++ b/assets/css/battle.css
@@ -1,3 +1,8 @@
+/**
+*working file for battle, please don't touch this file for now!! 
+*for pair programming ask Jeff Chen 29/11/2024-->
+*/
+
 .mini-map {
     margin-top: 20px;
 }
