--- a/assets/css/explore.css
+++ b/assets/css/explore.css
@@ -50,6 +50,10 @@
     transform: translate(-50%, 100%);
 }
 
+#carousel-left, #carousel-right, #carousel-up, #carousel-down {
+    color: orange;
+}
+
 #main-map {
     background-image: none;
 }
