--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,7 @@ body {
     font-family: "Amatic SC", sans-serif;
     font-size: 5rem;
     color: black;
+    background-color: #ffffff8c;
 }
 
 /* place holder button */
