--- a/assets/css/combat.css
+++ b/assets/css/combat.css
@@ -1,18 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
+
 body {
-    font-family: Arial, sans-serif;
-    background: #282c34;
-    color: #fff;
+    font-family: "Amatic SC", sans-serif;
+    font-size: 3rem;
+    background: #f7f4da;
+    color: #330000;
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
 }
 
 button {
-    background: #3498db;
-    color: #fff;
+    background: #aa9966;
+    color: #330000;
     border: none;
     padding: 10px 20px;
     margin: 5px;
@@ -22,7 +22,7 @@ button {
 }
 
 button:hover {
-    background: #2980b9;
+    background: #b6a975;
 }
 
 .combat-modal {
@@ -38,7 +38,7 @@ button:hover {
 }
 
 .combat-modal-content {
-    background: #3e4a5c;
+    background: #f7f4da;
     border-radius: 8px;
     text-align: center;
     padding: 20px;
@@ -51,7 +51,7 @@ button:hover {
     position: absolute;
     top: 10px;
     right: 15px;
-    color: #fff;
+    color: #eedd99;
     font-size: 24px;
     cursor: pointer;
 }
